--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body class="page-body">
 	<header class="page-header">
 		<h1 class="visually-hidden">Приложение PINK</h1>
-		<nav class="site-nav ">
+		<nav class="site-nav page-header__site-nav">
 			<div class="page-header__head">
 				<div class="logo page-header__logo">
 					<img src="img/logotype-white-mobile.png" alt="PINK" class="logo__img">
