Стилезовал блок для скачивания

--- a/app/index.html
+++ b/app/index.html
@@ -33,18 +33,22 @@
 				<li class="site-nav__item"><a href="#" class="site-nav__link"><span class="site-nav__text">HTML Academy</span></a></li>
 			</ul>
 		</nav>
-		<div class="temp"></div>
+		<div class="page-header__preview"></div>
 
 	</header>
 	<main class="page-main">
 		<section class="download">
 			<h2 class="visually-hidden">Скачайте наше приложение</h2>
-			<a href="#" class="button download__button">Скачать приложение</a>
+			<a href="#" class="button download__button">
+				<span class="button__text">
+				Скачать приложение	
+				</span>
+			</a>
 			<div class="stores download__stores">
 				<div class="stores__wrapper">
-					<a href="#" class="stores__link" aria-label="Скачать в Apple store"></a>
-					<a href="#" class="stores__link" aria-label="Скачать в Google play"></a>
-					<a href="#" class="stores__link" aria-label="Скачать в Microsoft store"></a>
+					<a href="#" class="stores__link stores__link--aps" aria-label="Скачать в Apple store"></a>
+					<a href="#" class="stores__link stores__link--gp" aria-label="Скачать в Google play"></a>
+					<a href="#" class="stores__link stores__link--ms" aria-label="Скачать в Microsoft store"></a>
 				</div>
 				<p class="stores__explanation">
 					Доступно&nbsp;для iPhone, iPad, Android, Windows&nbsp;Phone, OS&nbsp;X, Windows&nbsp;8
