Изменил поведение бургер меню, теперь при открытии скроллит наверх

--- a/app/index.html
+++ b/app/index.html
@@ -57,28 +57,28 @@
 		</section>
 		<section class="offer">
 			<h2 class="visually-hidden">Наше предложение</h2>
-			<div class="attraction">
+			<div class="attraction offer__attraction">
 				<p class="attraction__text">
 					Устали от&nbsp;серости мегаполиса?
 				</p>
 				<p class="attraction__text">
-					Нам есть, что&nbsp;вам&nbsp;предложить!
+					Нам есть, что&nbsp;вам предложить!
 				</p>
 			</div>
-			<ul class="addvatages offer__list">
+			<ul class="advatages offer__advantages">
 				<li class="addvantages__text-content">
-					<b class="addvatages__heading">Поднимает настроение</b>
-					<p class="addvatages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
+					<b class="advatages__heading">Поднимает настроение</b>
+					<p class="advatages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
 						кликов!</p>
 				</li>
 				<li class="addvantages__text-content">
-					<b class="addvatages__heading">Меняет мир вокруг</b>
-					<p class="addvatages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
+					<b class="advatages__heading">Меняет мир вокруг</b>
+					<p class="advatages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
 						эффект</p>
 				</li>
 				<li class="addvantages__text-content">
-					<b class="addvatages__heading">Заводит новых друзей</b>
-					<p class="addvatages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
+					<b class="advatages__heading">Заводит новых друзей</b>
+					<p class="advatages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
 					</p>
 				</li>
 			</ul>
