Стилезовал блок offer

--- a/app/index.html
+++ b/app/index.html
@@ -65,20 +65,20 @@
 					Нам есть, что&nbsp;вам предложить!
 				</p>
 			</div>
-			<ul class="advatages offer__advantages">
-				<li class="addvantages__text-content">
-					<b class="advatages__heading">Поднимает настроение</b>
-					<p class="advatages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
+			<ul class="advantages offer__advantages">
+				<li class="advantages__item">
+					<b class="advantages__heading">Поднимает настроение</b>
+					<p class="advantages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
 						кликов!</p>
 				</li>
-				<li class="addvantages__text-content">
-					<b class="advatages__heading">Меняет мир вокруг</b>
-					<p class="advatages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
+				<li class="advantages__item">
+					<b class="advantages__heading">Меняет мир вокруг</b>
+					<p class="advantages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
 						эффект</p>
 				</li>
-				<li class="addvantages__text-content">
-					<b class="advatages__heading">Заводит новых друзей</b>
-					<p class="advatages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
+				<li class="advantages__item">
+					<b class="advantages__heading">Заводит новых друзей</b>
+					<p class="advantages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
 					</p>
 				</li>
 			</ul>
