Наполовину сделанный слайдер, заменил спаны управления на кнопки

--- a/app/index.html
+++ b/app/index.html
@@ -85,37 +85,37 @@
 		</section>
 		<section class="reviews">
 			<div class="slider reviews__slider">
-				<div class="slider__item">
-					<p class="reviews__author">
+				<div class="slider__item--current review">
+					<p class="review__author">
 						Николай петров
 					</p>
-					<blockquote class="reviews__text">
+					<blockquote class="review__text">
 						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я
 						познакомился со своей будущей женой в комментариях к выложенной фотографии!»
 					</blockquote>
 				</div>
-				<div class="slider__item">
-					<p class="reviews__author">
+				<div class="slider__item review">
+					<p class="review__author">
 						Николай петров
 					</p>
-					<blockquote class="reviews__text">
+					<blockquote class="review__text">
 						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я
 						познакомился со своей будущей женой в комментариях к выложенной фотографии!»
 					</blockquote>
 				</div>
-				<div class="slider__item">
-					<p class="reviews__author">
+				<div class="slider__item review">
+					<p class="review__author">
 						Николай петров
 					</p>
-					<blockquote class="reviews__text">
+					<blockquote class="review__text">
 						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я
 						познакомился со своей будущей женой в комментариях к выложенной фотографии!»
 					</blockquote>
 				</div>
-				<div class="slider__dots ">
-					<span class="slider__dot"></span>
-					<span class="slider__dot"></span>
-					<span class="slider__dot"></span>
+				<div class="slider__dots">
+					<button class="slider__dot slider__dot--current"></button>
+					<button class="slider__dot"></button>
+					<button class="slider__dot"></button>
 				</div>
 			</div>
 		</section>
@@ -142,9 +142,9 @@
 					</tr>
 				</table>
 				<div class="slider__dots ">
-					<span class="slider__dot"></span>
-					<span class="slider__dot"></span>
-					<span class="slider__dot"></span>
+					<button class="slider__dot"></button>
+					<button class="slider__dot"></button>
+					<button class="slider__dot"></button>
 				</div>
 			</div>
 		</section>
@@ -180,7 +180,7 @@
 	<footer class="page-footer">
 		<iframe
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1551720086031"
-			frameborder="0" style="border:0" allowfullscreen>ул. Большая Конюшенная, 19/8</iframe>
+			frameborder="0" width="100%" style="border:0" allowfullscreen>ул. Большая Конюшенная, 19/8</iframe>
 	</footer>
 
 	<script src="js/sricpts.js"></script>
