Доделал слайдер с комментариями

--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,7 @@
 					</tr>
 				</table>
 				<div class="slider__dots ">
-					<button class="slider__dot"></button>
+					<button class="slider__dot slider__dot--current"></button>
 					<button class="slider__dot"></button>
 					<button class="slider__dot"></button>
 				</div>
