Сверстал слайдер с таблицами

--- a/app/index.html
+++ b/app/index.html
@@ -117,10 +117,10 @@
 					</blockquote>
 				</div>
 			</div>
-			<div class="slider__dots">
-				<button class="slider__dot slider__dot--current"></button>
-				<button class="slider__dot"></button>
-				<button class="slider__dot"></button>
+			<div class="slider-dots reviews__slider-dots">
+				<button class="slide-dots__dot slider-dots__dot--current"></button>
+				<button class="slider-dots__dot"></button>
+				<button class="slider-dots__dot"></button>
 			</div>
 		</section>
 		<section class="prices">
@@ -132,64 +132,64 @@
 							3,99 USD
 						</span>
 					</caption>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__included price-list__included--not" aria-label="Нет"></td>
+						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
 					</tr>
 				</table>
-				<table class="slider-overflow__item slider-overflow__item--current price-list__item">
+				<table class="slider-overflow__item price-list__item">
 					<caption class="price-list__heading">
 						Стандарт2<br>
 						<span class="price-list__price">
 							3,99 USD
 						</span>
 					</caption>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__included price-list__included--not" aria-label="Нет"></td>
+						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
 					</tr>
 				</table>
-				<table class="slider-overflow__item  price-list__item">
+				<table class="slider-overflow__item price-list__item">
 					<caption class="price-list__heading">
 						Стандарт3<br>
 						<span class="price-list__price">
 							3,99 USD
 						</span>
 					</caption>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__included" aria-label="Да"></td>
+						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
 					</tr>
-					<tr>
+					<tr class="price-list__row">
 						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__included price-list__included--not" aria-label="Нет"></td>
+						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
 					</tr>
 				</table>
 			</div>
-			<div class="slider__dots ">
-				<button class="slider__dot slider__dot--current"></button>
-				<button class="slider__dot"></button>
-				<button class="slider__dot"></button>
+			<div class="slider-dots prices__slider-dots">
+				<button class="slider-dots__dot slider-dots__dot--current"></button>
+				<button class="slider-dots__dot"></button>
+				<button class="slider-dots__dot"></button>
 			</div>
 		</section>
 		<section class="contact">
