--- a/app/index.html
+++ b/app/index.html
@@ -125,64 +125,77 @@
 		</section>
 		<section class="prices">
 			<div class="slider-overflow prices__slider">
-				<table class="slider-overflow__item price-list__item">
-					<caption class="price-list__heading">
-						Стандарт1<br>
-						<span class="price-list__price">
-							3,99 USD
-						</span>
-					</caption>
+				<table class="price-list">
 					<tr class="price-list__row">
-						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
+						<th class="price-list__head" colspan="2">
+							<span class="price-list__plan">Продвинутый</span>
+							<span class="price-list__rate">9,99</span></th>
+						<th class="price-list__head" colspan="2">
+							<span class="price-list__plan">Стандарт</span>
+							<span class="price-list__rate">3,99</span></th>
+						<th class="price-list__head" colspan="2">
+							<span class="price-list__plan">Анлим</span>
+							<span class="price-list__rate">16,99</span></th>
 					</tr>
 					<tr class="price-list__row">
-						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Розовый фильтр</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Розовый фильтр</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Розовый фильтр</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
 					</tr>
 					<tr class="price-list__row">
-						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
-					</tr>
-				</table>
-				<table class="slider-overflow__item price-list__item">
-					<caption class="price-list__heading">
-						Стандарт2<br>
-						<span class="price-list__price">
-							3,99 USD
-						</span>
-					</caption>
-					<tr class="price-list__row">
-						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
-					</tr>
-					<tr class="price-list__row">
-						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
-					</tr>
-					<tr class="price-list__row">
-						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
-					</tr>
-				</table>
-				<table class="slider-overflow__item price-list__item">
-					<caption class="price-list__heading">
-						Стандарт3<br>
-						<span class="price-list__price">
-							3,99 USD
-						</span>
-					</caption>
-					<tr class="price-list__row">
-						<td class="price-list__option">Розовый фильтр</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Смайлики</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Смайлики</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Смайлики</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included price-list__included--not" aria-label="нет"></span>
+						</td nowrap>
 					</tr>
 					<tr class="price-list__row">
-						<td class="price-list__option">Смайлики</td>
-						<td class="price-list__option"><span class="price-list__included" aria-label="Да"></span></td>
-					</tr>
-					<tr class="price-list__row">
-						<td class="price-list__option">Комментарии</td>
-						<td class="price-list__option"><span class="price-list__included price-list__included--not" aria-label="Нет"></span></td>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Комментарии</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Комментарии</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included" aria-label="да"></span>
+						</td nowrap>
+						<td nowrap class="price-list__data">
+							<span class="price-list__option">Комментарии</span>
+						</td nowrap>
+						<td nowrap class="price-list__data price-list__data--status">
+							<span class="price-list__included price-list__included--not" aria-label="нет"></span>
+						</td nowrap>
 					</tr>
 				</table>
 			</div>
@@ -224,7 +237,8 @@
 	<footer class="page-footer">
 		<iframe
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1551720086031"
-			frameborder="0" width="100%" class="google-map" style="border:0" allowfullscreen>ул. Большая Конюшенная, 19/8</iframe>
+			frameborder="0" width="100%" class="google-map" style="border:0" allowfullscreen>ул. Большая Конюшенная,
+			19/8</iframe>
 	</footer>
 
 	<script src="js/sricpts.js"></script>
