заскриптовал табличный слайдер

--- a/app/index.html
+++ b/app/index.html
@@ -129,13 +129,13 @@
 					<tr class="price-list__row">
 						<th class="price-list__head" colspan="2">
 							<span class="price-list__plan">Продвинутый</span>
-							<span class="price-list__rate">9,99</span></th>
+							<span class="price-list__rate">9,99 USD</span></th>
 						<th class="price-list__head" colspan="2">
 							<span class="price-list__plan">Стандарт</span>
-							<span class="price-list__rate">3,99</span></th>
+							<span class="price-list__rate">3,99 USD</span></th>
 						<th class="price-list__head" colspan="2">
 							<span class="price-list__plan">Анлим</span>
-							<span class="price-list__rate">16,99</span></th>
+							<span class="price-list__rate">16,99 USD</span></th>
 					</tr>
 					<tr class="price-list__row">
 						<td nowrap class="price-list__data">
@@ -200,9 +200,9 @@
 				</table>
 			</div>
 			<div class="slider-dots prices__slider-dots">
-				<button class="slider-dots__dot slider-dots__dot--current"></button>
-				<button class="slider-dots__dot"></button>
-				<button class="slider-dots__dot"></button>
+				<button id="prices-dot1" class="slider-dots__dot"></button>
+				<button id="prices-dot2" class="slider-dots__dot slider-dots__dot--current"></button>
+				<button id="prices-dot3" class="slider-dots__dot"></button>
 			</div>
 		</section>
 		<section class="contact">
