Добавил отступы для контактов

--- a/app/index.html
+++ b/app/index.html
@@ -215,19 +215,19 @@
 				Свяжитесь с нами!
 			</p>
 			<ul class="contact-list contacts__contact-list">
-				<li class="contact-list__item">
+				<li class="contact-list__item contacts__item">
 					<b class="contact-list__heading">Звоните:</b>
 					<a class="contact-list__link" href="tel:+78125556666">
 						+7 (812) 555-66-66
 					</a>
 				</li>
-				<li class="contact-list__item">
+				<li class="contact-list__item contacts__item">
 					<b class="contact-list__heading">Пишите:</b>
 					<a class="contact-list__link" href="mailto:mail@htmlacademy.ru">
 						mail@htmlacademy.ru
 					</a>
 				</li>
-				<li class="contact-list__item">
+				<li class="contact-list__item contacts__item">
 					<b class="contact-list__heading">Приезжайте в гости:</b>
 					<a class="contact-list__link" href="https://goo.gl/maps/HP8aeaY8E3F2">
 						ул. Большая<br>
