--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 		<nav class="site-nav page-header__site-nav">
 			<div class="page-header__head">
 				<div class="logo page-header__logo">
-					<a class="logo__link" aria-label="PINK">j</a>
+					<a class="logo__link" aria-label="PINK"></a>
 				</div>
 				<div class="burger-button page-header__burger-button">
 					<button class="burger-button__button burger-button__button--opened">
